--- a/primer5.html
+++ b/primer5.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style1.css">
-  <title></title>
+  <title>Primer5</title>
 </head>
 <body>
   <div id="container">
@@ -14,12 +14,12 @@
     </div>
       <div id="nav">
         <ul>
-          <li><a href="#">Площади</a></li>
-          <li><a href="#">Парки</a></li>
-          <li><a href="#">Фонтаны</a></li>
-          <li><a href="#">Памятники</a></li>
-          <li><a href="#">Скверы</a></li>
-          <li><a href="#">Водоёмы</a></li>
+          <li><a href="#Площади">Площади</a></li>
+          <li><a href="#Парки">Парки</a></li>
+          <li><a href="#Фонтаны">Фонтаны</a></li>
+          <li><a href="#Памятники">Памятники</a></li>
+          <li><a href="#Скверы">Скверы</a></li>
+          <li><a href="#Водоемы">Водоёмы</a></li>
         </ul>
       </div>
     <div id="content">
